<resources>
    <string name="app_name">Check-Mate</string>
    <string name="kashur">connected to:</string>
    <string name="join_the_event">Join the event</string>
    <string name="would_you_like_to_join">would you like to join:</string>
    <string name="how_are_you_connected">how are you connected?</string>
    <string name="bride_s_friend">Bride\'s friend...</string>
    <string name="event_warning">please note that you can only join one event. so you will be removed from previous events!</string>
    <string name="cancel">cancel</string>
    <string name="join">join</string>
    <string name="add_event">Add Event</string>
    <string name="event_name">Event name</string>
    <string name="please_don_t_add_unnecessary_events">please don\'t add unnecessary events!</string>
    <string name="add_your_event">Add your Event</string>
    <string name="your_location_is_loading">Your location is loading...</string>
    <string name="my_name">My name</string>
    <string name="female">Female</string>
    <string name="get_started">Get Started</string>
    <string name="male">Male</string>
    <string name="update">update</string>
    <string name="must_enter_name">must enter your name!</string>
    <string name="must_enter_age">must enter age!</string>
    <string name="must_enter_gender">you didn\'t enter your gender! you haft to be something!</string>
    <string name="must_enter_image">don\'t be shy and upload a picture!</string>
    <string name="invalid_input">Invalid input!</string>
    <string name="take_photo">Take Photo From Camera</string>
    <string name="choose_from_library">Choose from Gallery</string>
    <string name="add_photo">Slelect and Crop Photo!</string>
    <string name="select_file">Select File</string>
    <string name="exit_check_mate">Exit Check Mate</string>
    <string name="are_you_sure_you_want_to_leave">are you sure u want to leave?</string>
    <string name="exit">exit</string>
    <string name="removed_from_favorites">was removed from your favorites!</string>
    <string name="from_favorites">from favorites?</string>
    <string name="are_you_sure_you_want_to_remove">are you sure u want to remove</string>
    <string name="delete">delete</string>
    <string name="delete_from_favorites">Delete from favorites</string>
    <string name="update_profile">Update profile</string>
    <string name="dont_leave_name_empty">can\'t leave event name empty!</string>
    <string name="cant_leave_field_empty">can\'t leave field empty!</string>
    <string name="my_location">My Location...</string>
    <string name="add_new_event_in_my_location">add new event in my Location</string>
    <string name="my_favorites">My Favorites</string>
    <string name="event">Event:</string>
    <string name="was_added_to_your_favorites">was added to your favorites!</string>
    <string name="was_removed_from_your_favorites">was removed from your favorites!</string>
    <string name="send_info_to_friend">send info to friend</string>
    <string name="hi_what_do_you_think">HI, what do you think?</string>
    <string name="hi_i_saw">HI, I saw </string>
    <string name="at_the_wedding_can_you_send_more_info_please"> at the event. can u send me more info please?</string>
    <string name="get_more_info">get more info</string>
    <string name="send_info">Send info:</string>
    <string name="loading_events">Loading events...</string>
    <string name="exit_event">Exit Event</string>
    <string name="click_on_the_image_to_change_it">click on the image to change it</string>
    <string name="click_the_camera_icon_to_select_an_image">click the camera icon to select an image</string>
    <string name="there_are_no_events_in_your_location">there are no events in your location</string>
    <string name="your_message">Your message</string>
    <string name="send">send</string>
    <string name="delete_account_message">are you sure you want to delete your account? your information will be deleted and the app will close</string>
    <string name="cant_leave_message_empty">can\'t leave message empty</string>
    <string name="contact_us">Contact Us</string>
    <string name="we_d">We\'d</string>
    <string name="to_help">to help</string>
    <string name="delete_account">Delete account</string>
    <string name="updating">Updating...</string>
    <string name="deleting">Deleting...</string>
    <string name="gettingStarted">Getting Started...</string>
    <string name="joining_event">Joining event...</string>
    <string name="location_enabled_by_user">Location enabled by user!</string>
    <string name="location_not_enabled_user_cancelled">Location not enabled, user cancelled.</string>
    <string name="turn_on_gps">turn on gps</string>
    <string name="to_use_the_app_you_must_turn_on_your_gps">to use the app you must turn on your gps</string>
    <string-array name="contact_options">
        <item>Report Error</item>
        <item>Have any ideas to share</item>
        <item>Just say hi</item>
    </string-array>
</resources>
