<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.user.check_mate.controller.MainActivity"
    android:orientation="vertical">
    <FrameLayout
        android:id="@+id/turnOnGpsLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/to_use_the_app_you_must_turn_on_your_gps"
                android:layout_marginBottom="10dp"/>
           <Button
               android:id="@+id/turnOnGpsButton"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:text="@string/turn_on_gps"
               android:drawableLeft="@drawable/ic_open_gps"/>
        </LinearLayout>
    </FrameLayout>
    <FrameLayout
        android:id="@+id/refreshGPS"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">
       <LinearLayout
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_gravity="center"
           android:orientation="vertical">
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/your_location_is_loading"/>
           <ProgressBar
               android:layout_gravity="center"
               android:layout_width="180dp"
               android:layout_height="180dp"
               />
       </LinearLayout>
    </FrameLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/location_background"
        android:paddingTop="10dp"
        android:paddingLeft="5dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_location2"/>
        <TextView
            android:id="@+id/locationText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_location"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"/>
        <ImageView
            android:id="@+id/btnGetLoc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_refresh"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"/>
    </LinearLayout>
    <Button
        android:id="@+id/addEvent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_new_event_in_my_location"
        android:foreground="?android:attr/selectableItemBackground"
        android:background="@drawable/trans_rectangle_purple"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:shadowDy="2"
        android:shadowColor="@color/black"
        android:shadowDx="2"
        android:shadowRadius="5"
        android:clickable="true"/>
<android.support.v7.widget.RecyclerView
    android:id="@+id/events"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

</android.support.v7.widget.RecyclerView>
</LinearLayout>