<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.user.check_mate.controller.ContactActivity"
    android:background="@drawable/gradient_grey">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"

            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="36dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/we_d"
                    android:textSize="24sp"
                    android:textColor="@color/white"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_love"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/to_help"
                    android:textSize="24sp"
                    android:textColor="@color/white"/>
            </LinearLayout>

            <Spinner
                android:id="@+id/spinnerOptions"
                android:layout_marginTop="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/contact_options"
                android:layout_marginBottom="15dp"
                >

            </Spinner>

            <EditText
                android:id="@+id/editTextMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/your_message"
                android:ems="15"
                android:layout_marginBottom="15dp"
                android:textColor="@color/white"
                android:textColorHint="@color/whiteTransparent"/>
            <Button
                android:id="@+id/buttonSend"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send"/>
        </LinearLayout>

    </android.support.constraint.ConstraintLayout>



</ScrollView>
